--- a/crickify-client/package.json
+++ b/crickify-client/package.json
@@ -13,11 +13,13 @@
     "@tailwindcss/vite": "^4.1.3",
     "firebase": "^11.6.0",
     "flowbite": "^3.1.2",
+    "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.0",
+    "react-sweetalert2": "^0.6.0",
     "recharts": "^2.15.3",
     "tailgrids": "^2.3.0",
     "tailwindcss": "^4.1.3"
